k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-azure-app-service
  namespace: default
  labels:
    app: k8s-azure-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: k8s-azure-app

---
apiVersion: v1
kind: Service
metadata:
  name: k8s-azure-app-loadbalancer
  namespace: default
  labels:
    app: k8s-azure-app
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: /health
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: k8s-azure-app
